--- a/src/components/PhotoSection/Photo.css
+++ b/src/components/PhotoSection/Photo.css
@@ -20,12 +20,11 @@
     flex-direction: row;
     align-items: center;
     margin-top: 7vh;
-    gap: 0px;
+    gap: min(5.2vw, 75px);
+    max-width: 1050px;
 }
 .wrapper {
-    width: 50%;
-    margin-inline-end: 0;
-    padding-right: 0;
+    width: 80%;
     margin-left: 13.5vw;
 }
 .photosection__title {
@@ -49,15 +48,18 @@
     font-size: min(1.2vw, 1.25rem);
     margin-inline: 0;
     color: #FFFFFF;
+    margin-right: 0;
 }
 .button {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 70%;
     gap: min(2vh,3.125rem);
     z-index: 1;
+    max-width: 400px;
+    margin-left: 0;
 }
 .not__hover__effect {
     position: absolute;
@@ -270,4 +272,17 @@
         justify-content: center;
     }
 }
+@media screen and (max-width: 1650px) {
+    .photosection__headers {
+        justify-content: flex-start;
+        gap: 0px;
+    }
+    .wrapper {
+        width: 50vw;
+    }
+    /* .button {
+        justify-content: flex-start;
+    } */
+}
+
 
